--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,13 @@
   "name": "TP CARA MIAGE",
   "description": "",
   "version": "1.0",
+  "options_page":"page_options.html",
   "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "background": {
+    "scripts": ["popup.js"]
   },
   "permissions": [
     "activeTab",
